--- a/HSB/terms/hsbtermsV2.html
+++ b/HSB/terms/hsbtermsV2.html
@@ -1,16 +1,15 @@
 <html>
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-        <script src="../../myfooter/footer.js"></script>
+  <script src="../../myfooter/footer.js"></script>
   <script src="../../myheader/myheader.js"></script>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>HSB-HomeScreenBrowser Terms</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>HomeScreenBrowser Terms</title>
     </head>
     
-    <my-header></my-header> 
-    
+    <my-header></my-header>
+    <h3><a href="./hsbterms.html">改正前の利用規約はこちら</a></h3>
     <body class="c3">
-        <h1>8月28日に利用規約およびプライバシーポリシーが変更されます。詳しくは<a href="../../post/2022081.html">こちら</a></h1>
         <h1>利用規約</h1>
         <p>この利用規約（以下，「本規約」といいます。）は、NuohKA（以下，「開発者」といいます。）がHomeScreenBrowser（以下，「本アプリ」といいます。）の利用条件を定めるものです。ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本アプリをご利用いただきます。</p>
         <h1>第1条（適用）</h1>
@@ -84,7 +83,7 @@
             15. 本アプリを構成するプログラム（オブジェクトコード、ソースコード等全てを含みます）を複製し、または第三者に開示する行為
         </ul>
         <ul>
-            16. 本アプリの対象国(Google&nbsp;Play でインストールできる国)以外で使用すること
+            16. 本アプリの対象国(Google Play 及びApp Storeでインストールできる国)以外で使用すること
         </ul>
         <ul>
             17. その他，開発者が不適切と判断する行為
@@ -119,13 +118,16 @@
         <ul>2. 開発者は本アプリがユーザーの使用する端末で正常に動作することを保証しません。また正常に動作しなかったことに対し一切責任を負いません。</ul>
         <ul>3. 開発者は，本アプリに起因してユーザーに生じたあらゆる損害について、開発者の故意の場合を除き、一切の責任を負いません。</ul>
         <ul>4. 開発者は、本アプリに起因して第三者に生じたあらゆる損害について、一切の責任を負いません。</ul>
-        <ul>5. 開発者は、本アプリのブラウザ内でアクセスしたページやそれによるウイルス感染などについて、一切の責任を負いません。</ul>
-        <ul>6. 開発者は、本アプリ内のブラウザーに起因して生じたいかなる損害について、一切の責任を負いません。</ul>
-        <ul>7. 開発者は，本アプリに関して，ユーザーと他のユーザーまたは第三者との間において生じた取引，連絡または紛争等について一切責任を負いません。</ul>
+        <ul>5. 開発者は，本アプリに関して，ユーザーと他のユーザーまたは第三者との間において生じた取引，連絡または紛争等について一切責任を負いません。</ul>
         <h1>第7条（アプリ内容の変更等）</h1>
         <p>開発者は，ユーザーへの事前の告知なしに、本アプリの内容を変更、更新、追加または廃止することがあり、ユーザーはこれを承諾するものとします。</p>
         <h1>第8条（利用規約の変更）</h1>
-        <p>利用規約はユーザーの同意なく変更されることがあります。変更後はユーザーが同意することによって本アプリを使用することができます。</p>
+        <p><ul>１．開発者は以下の場合に、開発者の裁量により、本プライバシーポリシーを変更することができます。
+            <ul>本プライバシーポリシーの変更が、ユーザーの一般の利益に適合する場合。</ul>
+            <ul>本プライバシーポリシーの変更が契約の目的に反せず、かつ変更の必要性、変更後の内容の相当性、変更条項の有無及びその内容その他変更に係る事情に照らして合理的なものであるとき。</ul></ul>
+            <ul>２．開発者は前項による本プライバシーポリシーの変更にあたり、変更後の本プライバシーポリシーの効力発生日の前に相当な期間をもって、本プライバシーポリシーを変更する旨及び変更後の本プライバシーポリシーの内容とその効力発生日および効力が発生するバージョンを開発者のウェブサイトに掲示し、アプリで通知します。</ul>
+            <ul>３．ユーザーが変更後の本利用約款の効力発生日以降、効力が発生するバージョンのアプリを起動し、変更に同意した場合はアプリの使用を継続することができます。</ul>
+            </p>
         <h1>第9条（個人情報の取扱い）</h1>
         <p>開発者は，本アプリの利用によって取得する個人情報については，プライバシーポリシーに従い適切に取り扱うものとします。</p>
         <h1>第10条（通知または連絡）</h1>
@@ -136,10 +138,11 @@
         <ul>1. 本規約の解釈にあたっては，日本法を準拠法とします。</ul>
         <p>雑則        </p>
         <p>2022/02/13施行</p>
+        <p>2022/08/28改正 Ver.1.0以降適用<a href="../../post/2022081.html">改正について</a></p>
         <p>連絡先</p>
         <p>
             nuohkaspt<span>&nbsp;ATMARK&nbsp;</span>gmail.com
         </p>
     </body>
-    <my-footer></my-footer>
+   <my-footer></my-footer>
 </html>
