--- a/HSB/terms/hsbtermsV2.html
+++ b/HSB/terms/hsbtermsV2.html
@@ -19,7 +19,7 @@
                 2. 開発者は本アプリに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。
             </ul>
             <ul>
-                3. 本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。
+                3. 本規約の規定が前条の個別規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。
             </ul>
         <h1>
             第2条 （本アプリの権利）
