--- a/404.html
+++ b/404.html
@@ -18,6 +18,6 @@
     <body>
         <h1 class="_404">404</h1>
         <h1 class="_notfound">Sorry,the page you're looking for was not found</h1>
-        <h1 class="_notfound"><a href="./index.html">HomePage</a></h1>
+        <h1 class="_notfound"><a href="https://nuohka.github.io">HomePage</a></h1>
     </body>
 </html>
