--- a/HSB/policy/hsbpolicyV2.html
+++ b/HSB/policy/hsbpolicyV2.html
@@ -20,7 +20,8 @@
         </p>
         <p>
             収集される個人情報は
-            自動的に収集されるユーザー プロパティ - Google AdMob ヘルプ
+            <a href="https://support.google.com/admob/answer/9755590">自動的に収集されるユーザー プロパティ - Google AdMob ヘルプ</a>
+            
             に書かれているデータなどAdmobに必要なデータです。
             Admobは不正防止のためcookieを使用する場合があります。
             iOSのユーザーの場合、IDFAが収集される場合があります。
