--- a/HSB/setumei.html
+++ b/HSB/setumei.html
@@ -19,8 +19,8 @@
         <p class="ppar">HomeScreenBrowserはホーム画面でブラウザを表示できるアプリです。</p>
         <div style="height:15px"></div>
         <h3 class="appname">プライバシーポリシーおよび利用規約</h3>
-        <p class="ppar"><a href="./policy/hsbpolicy.html">プライバシーポリシー</a></p>
-        <p class="ppar"><a href="./terms/hsbterms.html">利用規約</a></p>
+        <p class="ppar"><a href="./policy/hsbpolicyV2.html">プライバシーポリシー</a></p>
+        <p class="ppar"><a href="./terms/hsbtermsV2.html">利用規約</a></p>
         
         
         <div class="contact">
