--- a/Memom/policy/memompolicy.html
+++ b/Memom/policy/memompolicy.html
@@ -8,7 +8,7 @@
     </head>
     <my-header></my-header>
     
-    <h1>6月10日に利用規約およびプライバシーポリシーが変更されました。詳しくは<a href="../../post/202205.html">こちら</a></h1>
+    <h1>8月28日に利用規約およびプライバシーポリシーが変更されました。詳しくは<a href="../../post/2022082.html">こちら</a></h1>
     
     <body class="c3">
         <h1>プライバシーポリシー</h1>
