--- a/Memom/terms/MemomTerms.html
+++ b/Memom/terms/MemomTerms.html
@@ -9,7 +9,7 @@
     
     <my-header></my-header>
     
-    <h1>6月10日に利用規約およびプライバシーポリシーが変更されました。詳しくは<a href="../../post/202205.html">こちら</a></h1>
+    <h1>8月28日に利用規約およびプライバシーポリシーが変更されました。詳しくは<a href="../../post/2022082.html">こちら</a></h1>
     <body class="c3">
         <h1>利用規約</h1>
         <p>この利用規約（以下，「本規約」といいます。）は、NuohKA（以下，「開発者」といいます。）がmemom（以下，「本アプリ」といいます。）の利用条件を定めるものです。ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本アプリをご利用いただきます。</p>
@@ -20,7 +20,7 @@
                 2. 開発者は本アプリに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。
             </ul>
             <ul>
-                3. 本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。
+                3. 本規約の規定が前条の個別規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。
             </ul>
         <h1>
             第2条 （本アプリの権利）
