--- a/Memom/terms/MemomTermsV2.html
+++ b/Memom/terms/MemomTermsV2.html
@@ -8,7 +8,7 @@
     </head>
     
     <my-header></my-header>
-    <h3><a href="./MemomTerms.html">改正前の利用規約はこちら</a></h3>
+    <h1>8月28日に利用規約およびプライバシーポリシーが変更されました。詳しくは<a href="../../post/2022082.html">こちら</a></h1>
     <body class="c3">
         <h1>利用規約</h1>
         <p>この利用規約（以下，「本規約」といいます。）は、NuohKA（以下，「開発者」といいます。）がmemom（以下，「本アプリ」といいます。）の利用条件を定めるものです。ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本アプリをご利用いただきます。</p>
