--- a/itigyo/terms/otdTermsV3.html
+++ b/itigyo/terms/otdTermsV3.html
@@ -4,14 +4,14 @@
   <script src="../../myfooter/footer.js"></script>
   <script src="../../myheader/myheader.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>HomeScreenBrowser Terms</title>
+    <title>OTD-One Thing Diary Terms</title>
     </head>
     
     <my-header></my-header>
-    <h3><a href="./hsbterms.html">改正前の利用規約はこちら</a></h3>
+    <h3><a href="./otdTermsV2.html">改正前の利用規約はこちら</a></h3>
     <body class="c3">
         <h1>利用規約</h1>
-        <p>この利用規約（以下，「本規約」といいます。）は、NuohKA（以下，「開発者」といいます。）がHomeScreenBrowser（以下，「本アプリ」といいます。）の利用条件を定めるものです。ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本アプリをご利用いただきます。</p>
+        <p>この利用規約（以下，「本規約」といいます。）は、NuohKA（以下，「開発者」といいます。）がOTD-One Thing Diary（以下，「本アプリ」といいます。）の利用条件を定めるものです。ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本アプリをご利用いただきます。</p>
         <h1>第1条（適用）</h1>
             <ul>1. 本規約は，ユーザーと開発者との間の本アプリの利用に関わる一切の関係に適用されるものとします。
             </ul>
@@ -19,7 +19,7 @@
                 2. 開発者は本アプリに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。
             </ul>
             <ul>
-                3. 本規約の規定が前条の個別規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。
+                3. 本規約の規定が前条の個別規定と矛盾する場合には，個別規定において特段の定めがない限り，個別規定の規定が優先されるものとします。
             </ul>
         <h1>
             第2条 （本アプリの権利）
@@ -138,7 +138,8 @@
         <ul>1. 本規約の解釈にあたっては，日本法を準拠法とします。</ul>
         <p>雑則        </p>
         <p>2022/02/13施行</p>
-        <p>2022/08/28改正 Ver.1.0以降適用<a href="../../post/2022081.html">改正について</a></p>
+        <p>2022/07/03改正 Ver.3.0以降適用<a href="../../post/2022061.html">改正について</a></p>
+        <p>2022/08/28改正 Ver.3.3以降適用<a href="../../post/2022082.html">改正について</a></p>
         <p>連絡先</p>
         <p>
             nuohkaspt<span>&nbsp;ATMARK&nbsp;</span>gmail.com
