--- a/index_m.html
+++ b/index_m.html
@@ -48,7 +48,8 @@
     <li><a href="./post/2022081.html"　>Home Screen Browser利用規約およびプライバシーポリシーの変更について</a></li>
     <li><a href="./post/2022061.html"　>OTD-One Thing Diary利用規約およびプライバシーポリシーの変更について</a></li>
     <li><a href="./post/202205.html"　>Memom利用規約およびプライバシーポリシーの変更について</a></li>
-    
+    <li><a href="./Memom/stopservice.html"　>Memomアプリ提供停止に関して</a></li>
+    <li><a href="./HSB/stopservice.html"　>HSB-HomeScreenBrowserのアプリ提供停止に関して</a></li>
 </ul>
         </div>
         <div class="about">
